--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 		</div>
 	</header>
 	<!-- END HEADER /////////////////////////////////////////////////////////////////////////// -->
+	<!-- INNSTAGRAM /////////////////////////////////////////////////////////////////////////// -->
+	<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+	<div class="elfsight-app-8ff98b50-a259-434a-ac58-9eee6225ce77"></div>
+	<!-- END INNSTAGRAM /////////////////////////////////////////////////////////////////////////// -->
 	<!-- CONTACT SECTION /////////////////////////////////////////////////////////////////////////// -->
 	<section id="contact" class="module">
 		<div class="container_small">
@@ -106,5 +110,5 @@
 	<script src="menu.js"></script>
 	<script src="featherlight.js" type="text/javascript" charset="utf-8"></script>
 	<script src="scroll.js"></script>
-<center></body>
+</body>
 </html>
