--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="images/favicon.png"> 
+	<link rel="shortcut icon" href=""> 
 </head>
 <body class="fade-in cmon body">
 	<!-- HEADER /////////////////////////////////////////////////////////////////////////// -->
@@ -51,8 +51,7 @@
 	</header>
 	<!-- END HEADER /////////////////////////////////////////////////////////////////////////// -->
 	<!-- INNSTAGRAM /////////////////////////////////////////////////////////////////////////// -->
-	<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-	<div class="elfsight-app-8ff98b50-a259-434a-ac58-9eee6225ce77"></div>
+	<div id="instagram-feed-demo" class="instagram_feed"></div>
 	<!-- END INNSTAGRAM /////////////////////////////////////////////////////////////////////////// -->
 	<!-- CONTACT SECTION /////////////////////////////////////////////////////////////////////////// -->
 	<section id="contact" class="module">
@@ -106,9 +105,11 @@
 	</footer>
 	<!-- END FOOTER /////////////////////////////////////////////////////////////////////////// -->
 	<!-- Scripts -->
-	<script src="parallax.js"></script>
 	<script src="menu.js"></script>
 	<script src="featherlight.js" type="text/javascript" charset="utf-8"></script>
+	<script src="parallax.js"></script>
 	<script src="scroll.js"></script>
+	<script src="jquery.instagramFeed.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
