--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="shortcut icon" href=""> 
 </head>
 <body class="fade-in cmon body">
-	<!-- HEADER /////////////////////////////////////////////////////////////////////////// -->
+	<!-- HEADER -->
 	<header id="welcome" class="parent module parallax parallax-1">
 		<div class="burger" id="toggle">
 			<span class="top"></span>
@@ -49,11 +49,24 @@
 			</div>
 		</div>
 	</header>
-	<!-- END HEADER /////////////////////////////////////////////////////////////////////////// -->
-	<!-- INNSTAGRAM /////////////////////////////////////////////////////////////////////////// -->
+	<!-- END HEADER -->
+	
+	<!-- INSTAGRAM -->
 	<div id="instagram-feed-demo" class="instagram_feed"></div>
-	<!-- END INNSTAGRAM /////////////////////////////////////////////////////////////////////////// -->
-	<!-- CONTACT SECTION /////////////////////////////////////////////////////////////////////////// -->
+	<!-- END INSTAGRAM -->
+
+	<!--CARTA -->
+	<div style="margin-top:80px;">
+		<h2 style="margin-bottom:30px" class="section_title">Mirá nuestra carta</h2>
+		<div class="ico-carta">
+			<i class="fa fa-map-marker" style="font-size:24px;font-size: 64px; margin-bottom: 9px;"></i>
+		</div>
+		<a class="menu-carta-btn" href="menu/carta.pdf" target="_blank"> Click aqui </a>
+	</div>			
+	<!-- FIN CARTA -->
+	
+
+	<!-- CONTACT SECTION -->
 	<section id="contact" class="module">
 		<div class="container_small">
 			<h2 class="section_title">Horarios</h2>
@@ -81,29 +94,22 @@
 					<p><a href="kunkelbenjamin08@gmail.com" target="_blank">kunkelbenjamin08@gmail.com</a></p>
 				</div>
 			</div>
-			<!-- Social icons -->
-			<div class="social">
-				<!-- Instagram-->
-				<a href="https://www.instagram.com/benjakunkel/" target="_blank">
-					<i class="fa fa-instagram"></i>
-				</a>
-				<!-- Instagram-->
-				<a href="https://www.instagram.com/benjakunkel/" target="_blank">
-					<i class="fa fa-instagram"></i>
-				</a>
-			</div>
+
 		</div>
 	</section>
-	<!-- END CONTACT SECTION /////////////////////////////////////////////////////////////////////////// -->	
-	<!-- FOOTER /////////////////////////////////////////////////////////////////////////// -->
+	<!-- END CONTACT SECTION -->	
+	<!-- FOOTER -->
 	<footer>
 		<div class="container_footer">
 			<div class="left">
 				<p>© 2020 <span>Pagina de prueba, Bragado, Buenos Aires, Argentina.</span></p>
 			</div>
+			<a href="https://www.instagram.com/benjakunkel/" target="_blank">
+				<i class="fa fa-instagram"></i>
+			</a>
 		</div>
 	</footer>
-	<!-- END FOOTER /////////////////////////////////////////////////////////////////////////// -->
+	<!-- END FOOTER -->
 	<!-- Scripts -->
 	<script src="menu.js"></script>
 	<script src="featherlight.js" type="text/javascript" charset="utf-8"></script>
