--- a/index.html
+++ b/index.html
@@ -6,53 +6,108 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<title>Nuevo Proyecto</title>
 	<!-- Styles -->
-	<link rel="stylesheet" href="style.css"/>
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+	<link rel="stylesheet" href="style/swiper.css" />
+	<link rel="stylesheet" href="style/style.css"/>
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-	<link type="text/css" rel="stylesheet" href="featherlight.css"/>
-	<style type="text/css">
-		@media all {
-			.lightbox { display: none; }
-		}
-	</style>
+	<link type="text/css" rel="stylesheet" href="style/featherlight.css"/>
+	<style type="text/css">	@media all { .lightbox { display: none; }} </style>
 	<!-- jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<!-- Favicon -->
-	<link rel="shortcut icon" href=""> 
 </head>
-<body class="fade-in cmon body">
+
+<body class="cmon body">
 	<!-- HEADER -->
 	<header id="welcome" class="parent module parallax parallax-1">
-		<div class="burger" id="toggle">
-			<span class="top"></span>
-			<span class="middle"></span>
-			<span class="bottom"></span>
-		</div>
-		<div class="navigation" id="navigation">
-			<nav class="overlay-menu">
-				<ul>
-					<li>
-						<a href="#" class="menu">Inicio</a>
-						<span class="simple_line"></span>
-					</li>
-					<li>
-						<a href="#contact" class="menu">Contacto</a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-		<div class="scroll_down"><i class="fa fa-chevron-down"></i></div>
-		<div class="fade child">
+		<div class="child">
 			<div class="container_small">
 				<h1 class="header_title">Nuevo restó</h1>
 				<h2 class="header_subtitle"> O LO QUE SEA</h2>
-				<img src="" alt="" style="width:250px">
 			</div>
 		</div>
 	</header>
 	<!-- END HEADER -->
 	
+	<!-- Barra asiatica -->
+		<div class="row">
+			<div class="col-sm-12 col-md-4 p0">
+				<div class="swiper-container swiper-asiatica">
+					<div class="swiper-wrapper">
+						<!-- Slides -->
+						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A1011.jpg" class="img-swipper-size" alt="barra asiatica 1"></div>
+						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A1017.jpg" class="img-swipper-size" alt="barra asiatica 2"></div>
+						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A1020.jpg" class="img-swipper-size" alt="barra asiatica 3"></div>
+						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A6849.jpg" class="img-swipper-size" alt="barra asiatica 4"></div>
+						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A6885.jpg" class="img-swipper-size" alt="barra asiatica 5"></div>
+						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A6892.jpg" class="img-swipper-size" alt="barra asiatica 6"></div>
+						<div class="swiper-slide"><img src="img/Barra Asiatica/DSC03175.jpg" class="img-swipper-size" alt="barra asiatica 7"></div>
+						<div class="swiper-slide"><img src="img/Barra Asiatica/DSC03234.jpg" class="img-swipper-size" alt="barra asiatica 8"></div>
+					</div>
+				</div>
+			</div>
+			
+		<!-- Barra de carnes -->
+			<div class="col-sm-12 col-md-4 p0">
+				<div class="swiper-container swiper-carnes">
+					<div class="swiper-wrapper">
+						<!-- Slides -->
+						<div class="swiper-slide"><img src="img/Barra Carnes/1Q7A1038.jpg" class="img-swipper-size"alt="barra carnes 1"></div>
+						<div class="swiper-slide"><img src="img/Barra Carnes/1Q7A1051.jpg" class="img-swipper-size" alt="barra carnes 2"></div>
+						<div class="swiper-slide"><img src="img/Barra Carnes/1Q7A1067.jpg" class="img-swipper-size" alt="barra carnes 3"></div>
+						<div class="swiper-slide"><img src="img/Barra Carnes/DSC00368.jpg" class="img-swipper-size" alt="barra carnes 4"></div>
+						<div class="swiper-slide"><img src="img/Barra Carnes/DSC00373.jpg" class="img-swipper-size" alt="barra carnes 5"></div>
+						<div class="swiper-slide"><img src="img/Barra Carnes/DSC03318.jpg" class="img-swipper-size" alt="barra carnes 6"></div>
+					</div>
+				</div>
+			</div>
+			
+		<!-- Barra pizza -->	
+			<div class="col-sm-12 col-md-4 p0">
+				<div class="swiper-container swiper-pizza">
+					<div class="swiper-wrapper">
+						<!-- Slides -->
+						<div class="swiper-slide"><img src="img/Barra de Pizzas/1Q7A7164.jpg" class="img-swipper-size" alt="barra-pizza 1"></div>
+						<div class="swiper-slide"><img src="img/Barra de Pizzas/1Q7A7224.jpg" class="img-swipper-size" alt="barra-pizza 2"></div>
+						<div class="swiper-slide"><img src="img/Barra de Pizzas/DSC00123.jpg" class="img-swipper-size" alt="barra-pizza 3"></div>
+					</div>
+				</div>
+			</div>
+
+
+			<!-- Barra pizza -->	
+			<div class="col-sm-12 col-md-4 p0">
+				<div class="swiper-container swiper-pinchos">
+					<div class="swiper-wrapper">
+						<!-- Slides -->
+						<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7184.jpg" class="img-swipper-size" alt="barra-pinchos 1"></div>
+						<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7187.jpg" class="img-swipper-size" alt="barra-pinchos 2"></div>
+						<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7209.jpg" class="img-swipper-size" alt="barra-pinchos 3"></div>
+						<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7222.jpg" class="img-swipper-size" alt="barra-pinchos 4"></div>
+						<div class="swiper-slide"><img src="img/Barra de Pinchos/DSC00112.jpg" class="img-swipper-size" alt="barra-pinchos 5"></div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-sm-12 col-md-4">
+				<h1 class="text-center">5</h1>
+			</div>
+			
+			<div class="col-sm-12 col-md-4">
+				<h1 class="text-center">6</h1>
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<h1 class="text-center">7</h1>
+			</div>
+			<div class="col-sm-12 col-md-8">
+				<h1 class="text-center">8</h1>
+			</div>
+		</div>
+
+
 	<!-- INSTAGRAM -->
-	<div id="instagram-feed-demo" class="instagram_feed"></div>
+	<!-- <div id="instagram-feed-demo" class="instagram_feed"></div>-->
 	<!-- END INSTAGRAM -->
 
 	<!--CARTA -->
@@ -111,11 +166,13 @@
 	</footer>
 	<!-- END FOOTER -->
 	<!-- Scripts -->
-	<script src="menu.js"></script>
-	<script src="featherlight.js" type="text/javascript" charset="utf-8"></script>
-	<script src="parallax.js"></script>
-	<script src="scroll.js"></script>
-	<script src="jquery.instagramFeed.js"></script>
-	<script src="script.js"></script>
+	<script src="scripts/swiper.js"></script>
+	<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+	<script src="scripts/menu.js"></script>
+	<script src="scripts/featherlight.js" type="text/javascript" charset="utf-8"></script>
+	<script src="scripts/scroll.js"></script>
+	<!-- <script src="scripts/jquery.instagramFeed.js"></script> -->
+	<script src="scripts/script.js"></script>
 </body>
 </html>
