--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body class="cmon body">
 	<!-- HEADER -->
-	<header id="welcome" class="parent module parallax parallax-1">
+	<header id="welcome" class="parent">
 		<div class="child">
 			<div class="container_small">
 				<h1 class="header_title">Nuevo restó</h1>
@@ -34,7 +34,7 @@
 	
 	<!-- Barra asiatica -->
 		<div class="row">
-			<div class="col-sm-12 col-md-4 p0">
+			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-asiatica">
 					<div class="swiper-wrapper">
 						<!-- Slides -->
@@ -51,7 +51,7 @@
 			</div>
 			
 		<!-- Barra de carnes -->
-			<div class="col-sm-12 col-md-4 p0">
+			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-carnes">
 					<div class="swiper-wrapper">
 						<!-- Slides -->
@@ -66,7 +66,7 @@
 			</div>
 			
 		<!-- Barra pizza -->	
-			<div class="col-sm-12 col-md-4 p0">
+			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-pizza">
 					<div class="swiper-wrapper">
 						<!-- Slides -->
@@ -78,8 +78,8 @@
 			</div>
 
 
-			<!-- Barra pizza -->	
-			<div class="col-sm-12 col-md-4 p0">
+			<!-- Barra pinchos -->	
+			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-pinchos">
 					<div class="swiper-wrapper">
 						<!-- Slides -->
@@ -92,18 +92,50 @@
 				</div>
 			</div>
 			
-			<div class="col-sm-12 col-md-4">
-				<h1 class="text-center">5</h1>
-			</div>
+				<!-- Barra papas fritas -->	
+				<div class="col-sm-12 col-md-4 p0 effect-brig">
+					<div class="swiper-container swiper-papas">
+						<div class="swiper-wrapper">
+							<!-- Slides -->
+							<div class="swiper-slide"><img src="img/Barra de papas/1Q7A7250.jpg" class="img-swipper-size" alt="barra-papas 1"></div>
+							<div class="swiper-slide"><img src="img/Barra de papas/1Q7A7258.jpg" class="img-swipper-size" alt="barra-papas 2"></div>
+							<div class="swiper-slide"><img src="img/Barra de papas/1Q7A7268.jpg" class="img-swipper-size" alt="barra-papas 3"></div>
+						</div>
+					</div>
+				</div>
 			
-			<div class="col-sm-12 col-md-4">
-				<h1 class="text-center">6</h1>
+			<!-- Barra papas fritas -->	
+			<div class="col-sm-12 col-md-4 p0 effect-brig">
+				<div class="swiper-container swiper-helados">
+					<div class="swiper-wrapper">
+						<!-- Slides -->
+						<div class="swiper-slide"><img src="img/Salvador Helados/1Q7A6528.jpg" class="img-swipper-size" alt="helados 1"></div>
+						<div class="swiper-slide"><img src="img/Salvador Helados/DSC08428.jpg" class="img-swipper-size" alt="helados 2"></div>
+						<div class="swiper-slide"><img src="img/Salvador Helados/DSC08451.jpg" class="img-swipper-size" alt="helados 3"></div>
+						<div class="swiper-slide"><img src="img/Salvador Helados/DSC08468 (1).jpg" class="img-swipper-size" alt="helados 4"></div>
+						<div class="swiper-slide"><img src="img/Salvador Helados/DSC08528.jpg" class="img-swipper-size" alt="helados 5"></div>
+					</div>
+				</div>
 			</div>
-			<div class="col-sm-12 col-md-4">
-				<h1 class="text-center">7</h1>
+
+		<!-- Barra papas cocteles -->	
+		<div class="col-sm-12 col-md-4 p0 effect-brig">
+			<div class="swiper-container swiper-coct">
+				<div class="swiper-wrapper">
+					<!-- Slides -->
+					<div class="swiper-slide"><img src="img/Cocteles/1Q7A0856.jpg" class="img-swipper-size" alt="coct 1"></div>
+					<div class="swiper-slide"><img src="img/Cocteles/1Q7A7283.jpg" class="img-swipper-size" alt="coct 2"></div>
+					<div class="swiper-slide"><img src="img/Cocteles/1Q7A7296.jpg" class="img-swipper-size" alt="coct 3"></div>
+					<div class="swiper-slide"><img src="img/Cocteles/DSC00165 2.jpg" class="img-swipper-size" alt="coct 4"></div>
+					<div class="swiper-slide"><img src="img/Cocteles/DSC00228.jpg" class="img-swipper-size" alt="coct 5"></div>
+					<div class="swiper-slide"><img src="img/Cocteles/DSC03049 2.jpg" class="img-swipper-size" alt="coct 6"></div>
+				</div>
 			</div>
+		</div>
+
 			<div class="col-sm-12 col-md-8">
-				<h1 class="text-center">8</h1>
+				<h1 class="text-center">EL PASEO GASTRONOMICO <br>
+				MÁS LINDO DE PICHINCHA </h1>
 			</div>
 		</div>
 
