--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<div class="row">
 			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-asiatica">
+					<h1 class="swiper-title-1-r">BARRA ASIATICA</h1>
 					<div class="swiper-wrapper">
 						<!-- Slides -->
 						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A1011.jpg" class="img-swipper-size" alt="barra asiatica 1"></div>
@@ -53,6 +54,7 @@
 		<!-- Barra de carnes -->
 			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-carnes">
+					<h1 class="swiper-title-1-r">BARRA CARNES</h1>
 					<div class="swiper-wrapper">
 						<!-- Slides -->
 						<div class="swiper-slide"><img src="img/Barra Carnes/1Q7A1038.jpg" class="img-swipper-size"alt="barra carnes 1"></div>
@@ -68,6 +70,8 @@
 		<!-- Barra pizza -->	
 			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-pizza">
+					<h1 class="swiper-title-2-r">BARRA PIZZAS <br>
+						NAPOTELANAS</h1>
 					<div class="swiper-wrapper">
 						<!-- Slides -->
 						<div class="swiper-slide"><img src="img/Barra de Pizzas/1Q7A7164.jpg" class="img-swipper-size" alt="barra-pizza 1"></div>
@@ -81,6 +85,7 @@
 			<!-- Barra pinchos -->	
 			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-pinchos">
+					<h1 class="swiper-title-1-r">BARRA PINCHOS</h1>
 					<div class="swiper-wrapper">
 						<!-- Slides -->
 						<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7184.jpg" class="img-swipper-size" alt="barra-pinchos 1"></div>
@@ -95,6 +100,8 @@
 				<!-- Barra papas fritas -->	
 				<div class="col-sm-12 col-md-4 p0 effect-brig">
 					<div class="swiper-container swiper-papas">
+						<h1 class="swiper-title-2-r">BARRA 
+								<br> PAPAS FRITAS</h1>
 						<div class="swiper-wrapper">
 							<!-- Slides -->
 							<div class="swiper-slide"><img src="img/Barra de papas/1Q7A7250.jpg" class="img-swipper-size" alt="barra-papas 1"></div>
@@ -107,6 +114,8 @@
 			<!-- Barra papas fritas -->	
 			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-helados">
+					<h1 class="swiper-title-1-r">SALVADOR <br>
+						HELADOS</h1>
 					<div class="swiper-wrapper">
 						<!-- Slides -->
 						<div class="swiper-slide"><img src="img/Salvador Helados/1Q7A6528.jpg" class="img-swipper-size" alt="helados 1"></div>
@@ -121,6 +130,7 @@
 		<!-- Barra papas cocteles -->	
 		<div class="col-sm-12 col-md-4 p0 effect-brig">
 			<div class="swiper-container swiper-coct">
+				<h1 class="swiper-title-1-r">CÓCTELES</h1>
 				<div class="swiper-wrapper">
 					<!-- Slides -->
 					<div class="swiper-slide"><img src="img/Cocteles/1Q7A0856.jpg" class="img-swipper-size" alt="coct 1"></div>
