--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 		</div>
 	</header>
 	<!-- END HEADER -->
-	
+
 	<!-- Barra asiatica -->
+	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-asiatica">
@@ -51,7 +52,7 @@
 				</div>
 			</div>
 			
-		<!-- Barra de carnes -->
+			<!-- Barra de carnes -->
 			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-carnes">
 					<h1 class="swiper-title-1-r">BARRA CARNES</h1>
@@ -67,7 +68,7 @@
 				</div>
 			</div>
 			
-		<!-- Barra pizza -->	
+			<!-- Barra pizza -->	
 			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-pizza">
 					<h1 class="swiper-title-2-r">BARRA PIZZAS <br>
@@ -82,20 +83,20 @@
 			</div>
 
 
-			<!-- Barra pinchos -->	
-			<div class="col-sm-12 col-md-4 p0 effect-brig">
-				<div class="swiper-container swiper-pinchos">
-					<h1 class="swiper-title-1-r">BARRA PINCHOS</h1>
-					<div class="swiper-wrapper">
-						<!-- Slides -->
-						<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7184.jpg" class="img-swipper-size" alt="barra-pinchos 1"></div>
-						<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7187.jpg" class="img-swipper-size" alt="barra-pinchos 2"></div>
-						<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7209.jpg" class="img-swipper-size" alt="barra-pinchos 3"></div>
-						<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7222.jpg" class="img-swipper-size" alt="barra-pinchos 4"></div>
-						<div class="swiper-slide"><img src="img/Barra de Pinchos/DSC00112.jpg" class="img-swipper-size" alt="barra-pinchos 5"></div>
+				<!-- Barra pinchos -->	
+				<div class="col-sm-12 col-md-4 p0 effect-brig">
+					<div class="swiper-container swiper-pinchos">
+						<h1 class="swiper-title-1-r">BARRA PINCHOS</h1>
+						<div class="swiper-wrapper">
+							<!-- Slides -->
+							<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7184.jpg" class="img-swipper-size" alt="barra-pinchos 1"></div>
+							<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7187.jpg" class="img-swipper-size" alt="barra-pinchos 2"></div>
+							<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7209.jpg" class="img-swipper-size" alt="barra-pinchos 3"></div>
+							<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7222.jpg" class="img-swipper-size" alt="barra-pinchos 4"></div>
+							<div class="swiper-slide"><img src="img/Barra de Pinchos/DSC00112.jpg" class="img-swipper-size" alt="barra-pinchos 5"></div>
+						</div>
 					</div>
 				</div>
-			</div>
 			
 				<!-- Barra papas fritas -->	
 				<div class="col-sm-12 col-md-4 p0 effect-brig">
@@ -111,88 +112,88 @@
 					</div>
 				</div>
 			
-			<!-- Barra papas fritas -->	
-			<div class="col-sm-12 col-md-4 p0 effect-brig">
-				<div class="swiper-container swiper-helados">
-					<h1 class="swiper-title-1-r">SALVADOR <br>
+				<!-- Barra papas fritas -->	
+				<div class="col-sm-12 col-md-4 p0 effect-brig">
+					<div class="swiper-container swiper-helados">
+					<h1 class="swiper-title-2-r">SALVADOR <br>
 						HELADOS</h1>
-					<div class="swiper-wrapper">
-						<!-- Slides -->
-						<div class="swiper-slide"><img src="img/Salvador Helados/1Q7A6528.jpg" class="img-swipper-size" alt="helados 1"></div>
-						<div class="swiper-slide"><img src="img/Salvador Helados/DSC08428.jpg" class="img-swipper-size" alt="helados 2"></div>
-						<div class="swiper-slide"><img src="img/Salvador Helados/DSC08451.jpg" class="img-swipper-size" alt="helados 3"></div>
-						<div class="swiper-slide"><img src="img/Salvador Helados/DSC08468 (1).jpg" class="img-swipper-size" alt="helados 4"></div>
-						<div class="swiper-slide"><img src="img/Salvador Helados/DSC08528.jpg" class="img-swipper-size" alt="helados 5"></div>
+						<div class="swiper-wrapper">
+							<!-- Slides -->
+							<div class="swiper-slide"><img src="img/Salvador Helados/1Q7A6528.jpg" class="img-swipper-size" alt="helados 1"></div>
+							<div class="swiper-slide"><img src="img/Salvador Helados/DSC08428.jpg" class="img-swipper-size" alt="helados 2"></div>
+							<div class="swiper-slide"><img src="img/Salvador Helados/DSC08451.jpg" class="img-swipper-size" alt="helados 3"></div>
+							<div class="swiper-slide"><img src="img/Salvador Helados/DSC08468 (1).jpg" class="img-swipper-size" alt="helados 4"></div>
+							<div class="swiper-slide"><img src="img/Salvador Helados/DSC08528.jpg" class="img-swipper-size" alt="helados 5"></div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Barra papas cocteles -->	
+				<div class="col-sm-12 col-md-4 p0 effect-brig">
+					<div class="swiper-container swiper-coct">
+						<h1 class="swiper-title-1-r">CÓCTELES</h1>
+						<div class="swiper-wrapper">
+							<!-- Slides -->
+							<div class="swiper-slide"><img src="img/Cocteles/1Q7A0856.jpg" class="img-swipper-size" alt="coct 1"></div>
+							<div class="swiper-slide"><img src="img/Cocteles/1Q7A7283.jpg" class="img-swipper-size" alt="coct 2"></div>
+							<div class="swiper-slide"><img src="img/Cocteles/1Q7A7296.jpg" class="img-swipper-size" alt="coct 3"></div>
+							<div class="swiper-slide"><img src="img/Cocteles/DSC00165 2.jpg" class="img-swipper-size" alt="coct 4"></div>
+							<div class="swiper-slide"><img src="img/Cocteles/DSC00228.jpg" class="img-swipper-size" alt="coct 5"></div>
+							<div class="swiper-slide"><img src="img/Cocteles/DSC03049 2.jpg" class="img-swipper-size" alt="coct 6"></div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-12 col-md-8">
+					<h1 class="text-center paseo-div">EL PASEO GASTRONOMICO <br>
+					MÁS LINDO DE PICHINCHA </h1>
+				</div>
+		</div>
+
+		<!--CARTA -->
+		<div style="margin-top:80px;">
+			<h2 style="margin-bottom:30px" class="section_title">Mirá nuestra carta</h2>
+			<div class="ico-carta">
+				<i class="fa fa-map-marker" style="font-size:24px;font-size: 64px; margin-bottom: 9px;"></i>
+			</div>
+			<a class="menu-carta-btn" href="menu/carta.pdf" target="_blank"> Click aqui </a>
+		</div>			
+		<!-- FIN CARTA -->
+	
+
+		<!-- CONTACT SECTION -->
+		<section id="contact" class="module">
+			<div class="container_small">
+				<h2 class="section_title">Horarios</h2>
+				<h3 class="section_subtitle">00:00 - 00:00 hs. | 00:00 - 00:00 hs.</h3>
+				<div class="info">
+					<!-- Address -->
+					<div>
+						<i class="fa fa-map-marker"></i>
+						<h3>DIRECCIÓN</h3>
+						<p><a href="https://goo.gl/maps/bNwo4dZU26irnAiU9">PEDIR DIRECCION PARA COMPETAR<br>
+				  	BARRIO, ROSARIO.<br> 
+				  	Argentina</a></p>
+					</div>
+					<!-- Phone -->
+					<div>
+						<i class="fa fa-phone"></i>
+						<h3>TElÉFONOS</h3>
+						<p>(0000) 1234-5678<br>
+						(0000) 1234-5678</p>
+					</div>
+					<!-- Email -->
+					<div>
+						<i class="fa fa-envelope-o"></i>
+						<h3>Email</h3>
+						<p><a href="kunkelbenjamin08@gmail.com" target="_blank">kunkelbenjamin08@gmail.com</a></p>
 					</div>
 				</div>
 			</div>
-
-		<!-- Barra papas cocteles -->	
-		<div class="col-sm-12 col-md-4 p0 effect-brig">
-			<div class="swiper-container swiper-coct">
-				<h1 class="swiper-title-1-r">CÓCTELES</h1>
-				<div class="swiper-wrapper">
-					<!-- Slides -->
-					<div class="swiper-slide"><img src="img/Cocteles/1Q7A0856.jpg" class="img-swipper-size" alt="coct 1"></div>
-					<div class="swiper-slide"><img src="img/Cocteles/1Q7A7283.jpg" class="img-swipper-size" alt="coct 2"></div>
-					<div class="swiper-slide"><img src="img/Cocteles/1Q7A7296.jpg" class="img-swipper-size" alt="coct 3"></div>
-					<div class="swiper-slide"><img src="img/Cocteles/DSC00165 2.jpg" class="img-swipper-size" alt="coct 4"></div>
-					<div class="swiper-slide"><img src="img/Cocteles/DSC00228.jpg" class="img-swipper-size" alt="coct 5"></div>
-					<div class="swiper-slide"><img src="img/Cocteles/DSC03049 2.jpg" class="img-swipper-size" alt="coct 6"></div>
-				</div>
-			</div>
-		</div>
-
-			<div class="col-sm-12 col-md-8">
-				<h1 class="text-center">EL PASEO GASTRONOMICO <br>
-				MÁS LINDO DE PICHINCHA </h1>
-			</div>
-		</div>
-
-	<!--CARTA -->
-	<div style="margin-top:80px;">
-		<h2 style="margin-bottom:30px" class="section_title">Mirá nuestra carta</h2>
-		<div class="ico-carta">
-			<i class="fa fa-map-marker" style="font-size:24px;font-size: 64px; margin-bottom: 9px;"></i>
-		</div>
-		<a class="menu-carta-btn" href="menu/carta.pdf" target="_blank"> Click aqui </a>
-	</div>			
-	<!-- FIN CARTA -->
-	
-
-	<!-- CONTACT SECTION -->
-	<section id="contact" class="module">
-		<div class="container_small">
-			<h2 class="section_title">Horarios</h2>
-			<h3 class="section_subtitle">00:00 - 00:00 hs. | 00:00 - 00:00 hs.</h3>
-			<div class="info">
-				<!-- Address -->
-				<div>
-					<i class="fa fa-map-marker"></i>
-					<h3>DIRECCIÓN</h3>
-					<p><a href="https://goo.gl/maps/bNwo4dZU26irnAiU9">PEDIR DIRECCION PARA COMPETAR<br>
-				  BARRIO, ROSARIO.<br> 
-				  Argentina</a></p>
-				</div>
-				<!-- Phone -->
-				<div>
-					<i class="fa fa-phone"></i>
-					<h3>TElÉFONOS</h3>
-					<p>(0000) 1234-5678<br>
-					(0000) 1234-5678</p>
-				</div>
-				<!-- Email -->
-				<div>
-					<i class="fa fa-envelope-o"></i>
-					<h3>Email</h3>
-					<p><a href="kunkelbenjamin08@gmail.com" target="_blank">kunkelbenjamin08@gmail.com</a></p>
-				</div>
-			</div>
-
-		</div>
-	</section>
-	<!-- END CONTACT SECTION -->	
-	<!-- FOOTER -->
+		</section>
+		<!-- END CONTACT SECTION -->	
+		<!-- FOOTER -->
+	</div>
 	<footer>
 		<div class="container_footer">
 			<div class="left">
