--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<header id="welcome" class="parent">
 		<div class="child">
 			<div class="container_small">
-				<h1 class="header_title">Nuevo restó</h1>
-				<h2 class="header_subtitle"> O LO QUE SEA</h2>
+				<h1 class="header_title">PASEO GASTRONÓMICO</h1>
+				<img class="logo" src="img/Logo/logo.png" alt="logo">
 			</div>
 		</div>
 	</header>
