--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					</div>
 				</div>
 
-				<div class="col-sm-12 col-md-8">
+				<div class="d-none d-md-block col-md-8">
 					<h1 class="text-center paseo-div">EL PASEO GASTRONOMICO <br>
 					MÁS LINDO DE PICHINCHA </h1>
 				</div>
