lushg;agl;kfdas

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 	<!-- END HEADER -->
 
 	<!-- Barra asiatica -->
-	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-asiatica">
@@ -150,8 +149,8 @@
 				</div>
 		</div>
 
-		<!--CARTA -->
-		<div style="margin-top:80px;">
+		<!-- CARTA -->
+		<div class="menu-section">
 			<h2 style="margin-bottom:30px" class="section_title">Mirá nuestra carta</h2>
 			<div class="ico-carta">
 				<i class="fa fa-map-marker" style="font-size:24px;font-size: 64px; margin-bottom: 9px;"></i>
@@ -159,6 +158,14 @@
 			<a class="menu-carta-btn" href="menu/carta.pdf" target="_blank"> Click aqui </a>
 		</div>			
 		<!-- FIN CARTA -->
+
+		<!--MAPA -->
+		<div class="map-section">
+			<div class="map-container">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.7397201684653!2d-57.96222978422929!3d-34.91298078143511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e6356bc3c63d%3A0xeb1f2992f0b479f0!2sCalle%2043%20771%2C%20B1902AEE%20La%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1615061212848!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+			</div>
+		</div>			
+		<!-- FIN MAPA -->
 	
 
 		<!-- CONTACT SECTION -->
@@ -193,7 +200,7 @@
 		</section>
 		<!-- END CONTACT SECTION -->	
 		<!-- FOOTER -->
-	</div>
+	
 	<footer>
 		<div class="container_footer">
 			<div class="left">
