--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
 				</div>
 		</div>
 
+	<!-- Container especial -->	
+	<div class="container">
 		<!-- CARTA -->
 		<div class="menu-section">
 			<h2 style="margin-bottom:30px" class="section_title">Mirá nuestra carta</h2>
@@ -200,7 +202,7 @@
 		</section>
 		<!-- END CONTACT SECTION -->	
 		<!-- FOOTER -->
-	
+	</div>
 	<footer>
 		<div class="container_footer">
 			<div class="left">
