--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 	</header>
 	<!-- END HEADER -->
 
-	<!-- Barra asiatica -->
+	<!-- Container principal -->
+	<div class="container">
+		<!-- ROW -->
 		<div class="row">
+			<!-- Barra asiatica -->
 			<div class="col-sm-12 col-md-4 p0 effect-brig">
 				<div class="swiper-container swiper-asiatica">
 					<h1 class="swiper-title-1-r">BARRA ASIATICA</h1>
@@ -147,7 +150,10 @@
 					<h1 class="text-center paseo-div">EL PASEO GASTRONOMICO <br>
 					MÁS LINDO DE PICHINCHA </h1>
 				</div>
+			<!-- fin row -->
 		</div>
+		<!-- fin cont principal -->
+	</div>
 
 	<!-- Container especial -->	
 	<div class="container">
