--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 	<!-- END HEADER -->
 
 	<!-- Container principal -->
-	<div class="container">
+	<div class="container container-full">
 		<!-- ROW -->
 		<div class="row">
 			<!-- Barra asiatica -->
-			<div class="col-sm-12 col-md-4 p0 effect-brig">
+			<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
 				<div class="swiper-container swiper-asiatica">
 					<h1 class="swiper-title-1-r">BARRA ASIATICA</h1>
 					<div class="swiper-wrapper">
@@ -55,7 +55,7 @@
 			</div>
 			
 			<!-- Barra de carnes -->
-			<div class="col-sm-12 col-md-4 p0 effect-brig">
+			<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
 				<div class="swiper-container swiper-carnes">
 					<h1 class="swiper-title-1-r">BARRA CARNES</h1>
 					<div class="swiper-wrapper">
@@ -71,7 +71,7 @@
 			</div>
 			
 			<!-- Barra pizza -->	
-			<div class="col-sm-12 col-md-4 p0 effect-brig">
+			<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
 				<div class="swiper-container swiper-pizza">
 					<h1 class="swiper-title-2-r">BARRA PIZZAS <br>
 						NAPOTELANAS</h1>
@@ -86,7 +86,7 @@
 
 
 				<!-- Barra pinchos -->	
-				<div class="col-sm-12 col-md-4 p0 effect-brig">
+				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
 					<div class="swiper-container swiper-pinchos">
 						<h1 class="swiper-title-1-r">BARRA PINCHOS</h1>
 						<div class="swiper-wrapper">
@@ -101,7 +101,7 @@
 				</div>
 			
 				<!-- Barra papas fritas -->	
-				<div class="col-sm-12 col-md-4 p0 effect-brig">
+				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
 					<div class="swiper-container swiper-papas">
 						<h1 class="swiper-title-2-r">BARRA 
 								<br> PAPAS FRITAS</h1>
@@ -115,7 +115,7 @@
 				</div>
 			
 				<!-- Barra papas fritas -->	
-				<div class="col-sm-12 col-md-4 p0 effect-brig">
+				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
 					<div class="swiper-container swiper-helados">
 					<h1 class="swiper-title-2-r">SALVADOR <br>
 						HELADOS</h1>
@@ -131,7 +131,7 @@
 				</div>
 
 				<!-- Barra papas cocteles -->	
-				<div class="col-sm-12 col-md-4 p0 effect-brig">
+				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
 					<div class="swiper-container swiper-coct">
 						<h1 class="swiper-title-1-r">CÓCTELES</h1>
 						<div class="swiper-wrapper">
@@ -146,7 +146,7 @@
 					</div>
 				</div>
 
-				<div class="d-none d-md-block col-md-8">
+				<div class="d-none d-md-block col-md-8 h-fix">
 					<h1 class="text-center paseo-div">EL PASEO GASTRONOMICO <br>
 					MÁS LINDO DE PICHINCHA </h1>
 				</div>
