--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
 					<h1 class="text-center paseo-div">EL PASEO GASTRONOMICO <br>
 					MÁS LINDO DE PICHINCHA </h1>
 				</div>
+				
+				<!-- CARTA -->
+				<div class="col-md-12 col-sm-12 carta-section">
+					<a class="menu-carta-btn" href="menu/carta.pdf" target="_blank"> MENU </a>
+				</div>
+				<!-- FIN CARTA -->
 			<!-- fin row -->
 		</div>
 		<!-- fin cont principal -->
@@ -157,16 +163,6 @@
 
 	<!-- Container especial -->	
 	<div class="container">
-		<!-- CARTA -->
-		<div class="menu-section">
-			<h2 style="margin-bottom:30px" class="section_title">Mirá nuestra carta</h2>
-			<div class="ico-carta">
-				<i class="fa fa-map-marker" style="font-size:24px;font-size: 64px; margin-bottom: 9px;"></i>
-			</div>
-			<a class="menu-carta-btn" href="menu/carta.pdf" target="_blank"> Click aqui </a>
-		</div>			
-		<!-- FIN CARTA -->
-
 		<!--MAPA -->
 		<div class="map-section">
 			<div class="map-container">
