--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<!-- Barra de carnes -->
 			<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-				<div class="swiper-container swiper-carnes">
+				<div class="swiper-container swiper-asiatica">
 					<h1 class="swiper-title-1-r">BARRA CARNES</h1>
 					<div class="swiper-wrapper">
 						<!-- Slides -->
@@ -69,10 +69,10 @@
 					</div>
 				</div>
 			</div>
-			
-			<!-- Barra pizza -->	
+
+			<!-- Barra pizza -->
 			<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-				<div class="swiper-container swiper-pizza">
+				<div class="swiper-container swiper-asiatica">
 					<h1 class="swiper-title-2-r">BARRA PIZZAS <br>
 						NAPOTELANAS</h1>
 					<div class="swiper-wrapper">
@@ -85,9 +85,9 @@
 			</div>
 
 
-				<!-- Barra pinchos -->	
+				<!-- Barra pinchos -->
 				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-					<div class="swiper-container swiper-pinchos">
+					<div class="swiper-container swiper-asiatica">
 						<h1 class="swiper-title-1-r">BARRA PINCHOS</h1>
 						<div class="swiper-wrapper">
 							<!-- Slides -->
@@ -99,11 +99,11 @@
 						</div>
 					</div>
 				</div>
-			
-				<!-- Barra papas fritas -->	
+
+				<!-- Barra papas fritas -->
 				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-					<div class="swiper-container swiper-papas">
-						<h1 class="swiper-title-2-r">BARRA 
+					<div class="swiper-container swiper-asiatica">
+						<h1 class="swiper-title-2-r">BARRA
 								<br> PAPAS FRITAS</h1>
 						<div class="swiper-wrapper">
 							<!-- Slides -->
@@ -113,10 +113,10 @@
 						</div>
 					</div>
 				</div>
-			
-				<!-- Barra papas fritas -->	
+
+				<!-- Barra papas fritas -->
 				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-					<div class="swiper-container swiper-helados">
+					<div class="swiper-container swiper-asiatica">
 					<h1 class="swiper-title-2-r">SALVADOR <br>
 						HELADOS</h1>
 						<div class="swiper-wrapper">
@@ -130,9 +130,9 @@
 					</div>
 				</div>
 
-				<!-- Barra papas cocteles -->	
+				<!-- Barra papas cocteles -->
 				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-					<div class="swiper-container swiper-coct">
+					<div class="swiper-container swiper-asiatica">
 						<h1 class="swiper-title-1-r">CÓCTELES</h1>
 						<div class="swiper-wrapper">
 							<!-- Slides -->
@@ -150,7 +150,7 @@
 					<h1 class="text-center paseo-div">EL PASEO GASTRONOMICO <br>
 					MÁS LINDO DE PICHINCHA </h1>
 				</div>
-				
+
 				<!-- CARTA -->
 				<div class="col-md-12 col-sm-12 carta-section">
 					<a class="menu-carta-btn" href="menu/carta.pdf" target="_blank"> MENU </a>
@@ -161,16 +161,16 @@
 		<!-- fin cont principal -->
 	</div>
 
-	<!-- Container especial -->	
+	<!-- Container especial -->
 	<div class="container">
 		<!--MAPA -->
 		<div class="map-section">
 			<div class="map-container">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.7397201684653!2d-57.96222978422929!3d-34.91298078143511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e6356bc3c63d%3A0xeb1f2992f0b479f0!2sCalle%2043%20771%2C%20B1902AEE%20La%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1615061212848!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 			</div>
-		</div>			
+		</div>
 		<!-- FIN MAPA -->
-	
+
 
 		<!-- CONTACT SECTION -->
 		<section id="contact" class="module">
@@ -183,7 +183,7 @@
 						<i class="fa fa-map-marker"></i>
 						<h3>DIRECCIÓN</h3>
 						<p><a href="https://goo.gl/maps/bNwo4dZU26irnAiU9">PEDIR DIRECCION PARA COMPETAR<br>
-				  	BARRIO, ROSARIO.<br> 
+				  	BARRIO, ROSARIO.<br>
 				  	Argentina</a></p>
 					</div>
 					<!-- Phone -->
@@ -202,7 +202,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- END CONTACT SECTION -->	
+		<!-- END CONTACT SECTION -->
 		<!-- FOOTER -->
 	</div>
 	<footer>
